Fix text color in dark mode

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -174,6 +174,10 @@ from{ bottom:-100px; opacity:0 }
 to{ bottom:0; opacity:1 }
 }
 
+#wordrow, #phonemerow {
+    color: black;
+}
+
 #myDiv {
 display: none;
 text-align: center;
